--- a/eagle/templates/main/agent_main.html
+++ b/eagle/templates/main/agent_main.html
@@ -76,13 +76,8 @@
 			</form>
 			<input type="checkbox" id="switch-mode" hidden>
 			<label for="switch-mode" class="switch-mode"></label>
-			<a href="#" class="notification">
-				<i class='bx bxs-bell' ></i>
-				<span class="num">8</span>
-			</a>
-			<a href="#" class="profile">
-				<img src="assets/img/people.png">
-			</a>
+			
+			
 		</nav>
 		<!-- NAVBAR -->
 
@@ -97,6 +92,7 @@
 	<!-- CONTENT -->
 	
 
-	<script src="assets/js/script.js"></script>
+	<script src="{% static 'js/script.js' %}"></script>
+	<script src="{% static 'js/active.js' %}"></script>
 </body>
 </html>
