--- a/eagle/templates/dashboard/admin/payment_history.html
+++ b/eagle/templates/dashboard/admin/payment_history.html
@@ -1,108 +1,7 @@
-<!DOCTYPE html>
+{% extends 'main/admin_main.html' %}
 {% load static %}
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- Boxicons -->
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<!-- My CSS -->
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
-    <!-- Include the jsPDF library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-
-    <!-- Include the js-xlsx library for Excel export -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
-
-    <!-- Include the TableExport library -->
-    <script src="https://cdn.jsdelivr.net/npm/tableexport@5.2.0/dist/js/tableexport.min.js"></script>
-
-	<title>AdminHub</title>
-</head>
-<body>
-
-
-	<!-- SIDEBAR -->
-	<section id="sidebar">
-		<a href="index.html" class="brand">
-			<img class='bx' src="{% static 'img/eagle-logo.jpg' %}" style="background-size: cover; position: relative; border-radius: 50%; padding-top: 10px;">
-			
-			<span class="text">ADMIN</span>
-		</a>
-		<ul class="side-menu top">
-			<li >
-				<a href="{% url 'home' %}">
-					<i class='bx bxs-dashboard' ></i>
-					<span class="text">Dashboard</span>
-				</a>
-			</li>
-		
-			<li>
-				<a href="{% url 'register_agent' %}">
-					<i class='bx bxs-group' ></i>
-					<span class="text">Register agent</span>
-				</a>
-			</li>
-			<li>
-				<a href="{% url 'register_customer' %}">
-					<i class='bx bxs-dashboard' ></i>
-					<span class="text">Register customer</span>
-				</a>
-			</li>
-			<li >
-				<a href="{% url 'agent_list' %}">
-					<i class='bx bxs-group' ></i>
-					<span class="text">Agent list</span>
-				</a>
-			</li>
-            <li class="active">
-				<a href="{% url 'customer_list' %}">
-					<i class='bx bxs-group' ></i>
-					<span class="text">Customer list</span>
-				</a>
-			</li>
-		</ul>
-		<ul class="side-menu">
-			
-			<li>
-				<a href="#" class="logout">
-					<i class='bx bx-exit' ></i>
-					<span class="text">Logout</span>
-				</a>
-			</li>
-		</ul>
-	</section>
-	<!-- SIDEBAR -->
-
-
-
-	<!-- CONTENT -->
-	<section id="content">
-		<!-- NAVBAR -->
-		<nav>
-			<i class='bx bx-menu' ></i>
-			
-			<form action="#">
-				<div class="form-input">
-					<input type="search" placeholder="Search...">
-					<button type="submit" class="search-btn"><i class='bx bx-search' ></i></button>
-				</div>
-			</form>
-			<input type="checkbox" id="switch-mode" hidden>
-			<label for="switch-mode" class="switch-mode"></label>
-			<a href="#" class="notification">
-				<i class='bx bxs-bell' ></i>
-				<span class="num">8</span>
-			</a>
-			<a href="#" class="profile">
-				<img src="assets/img/people.png">
-			</a>
-		</nav>
-		<!-- NAVBAR -->
-
+{% block content %}
 		<!-- MAIN -->
 		<main>
 			<div class="head-title">
@@ -146,8 +45,8 @@
 			<div class="table-data" >
 				<div class="order">
 					<div class="head">
-						<p><span><b>Client Name</b>: JANE DOE</span></p>
-						<p><span><b>Client ID</b>: 1220390</span></p>
+						<p><span><b>Client Name</b>: {{user.username}}</span></p>
+						<p><span><b>Client ID</b>: {{user.customer_id }}</span></p>
 						
 					</div>
 					<table id="table">
@@ -162,22 +61,28 @@
 							</tr>
 						</thead>
 						<tbody>
-							{% for payment in user_payments  %}
-							<tr>
-								<td>{{ payment.amount_paid }}</td>
-								<td>{{ payment.payment_duration }}</td>
-								<td>{{ payment.description }}</td>
-								<td>{{ payment.payment_date }}</td>
-								<td>{{ payment.expiry_date }}</td>
-								<td>
-									{% if payment.expiry_date < now %}
-									<p style='color:red;'>Active</p>
-									{% else %}
-										<p style='color:green;'>Active</p>
-									{% endif %}
-								</td>
-							</tr>
-							{% endfor %}
+							{% if user_payments %}
+								{% for payment in user_payments %}
+									<tr>
+									<td>{{ payment.amount_paid }}</td>
+									<td>{{ payment.payment_duration }}</td>
+									<td>{{ payment.description }}</td>
+									<td>{{ payment.payment_date }}</td>
+									<td>{{ payment.expiry_date }}</td>
+									<td>
+										{% if payment.expiry_date < now %}
+											<p style='color:red;'>Expired</p>
+										{% else %}
+											<p style='color:green;'>Active</p>
+										{% endif %}
+									</td>
+									</tr>
+								{% endfor %}
+							{% else %}
+								<tr>
+									<td colspan="6">No data available</td>
+								</tr>
+							{% endif %}
 						</tbody>
 					</table>
 					
@@ -187,9 +92,19 @@
 		<!-- MAIN -->
 	</section>
 	<!-- CONTENT -->
-	
-	<script type="text/javascript" src="assets/js/table2excel.js"></script>
-	<script src="assets/js/script.js"></script>
-	<script src="assets/js/download.js"></script>
-</body>
-</html>
+	<script>
+		document.addEventListener("DOMContentLoaded", function() {
+			// Find the active <li> element and remove the active class
+			var activeElement = document.querySelector(".side-menu.top .active");
+			if (activeElement) {
+				activeElement.classList.remove("active");
+			}
+		
+			// Find the desired <li> element and add the active class
+			var desiredElement = document.querySelector(".side-menu.top li:nth-child(5)");
+			if (desiredElement) {
+				desiredElement.classList.add("active");
+			}
+		});
+	</script>
+{% endblock %}
