--- a/eagle/templates/dashboard/admin/register_customer.html
+++ b/eagle/templates/dashboard/admin/register_customer.html
@@ -35,11 +35,26 @@
 						<i class='bx bx-filter' ></i>
 					</div>
 					<form action="" method="POST">
-                        {% csrf_token %}
-                        {{form.as_p}}
+                       
+						<div class="user-details">
+							<div class="input-box">
+								{% csrf_token %}
+								{{form.as_p}}
+							</div>
+							
+						</div>
                         
-                        <input type="submit" name="Submit">
+						<div class="button">
+							<input type="submit" value="Register">
+						</div>
                     </form>
+					{% if messages %}
+					<ul class="messages">
+						{% for message in messages %}
+						<li class="{{ message.tags }}">{{ message }}</li>
+						{% endfor %}
+					</ul>
+					{% endif %}
 				</div>
 			</div>
 		</main>
