--- a/eagle/templates/dashboard/agent/payment_form.html
+++ b/eagle/templates/dashboard/agent/payment_form.html
@@ -56,10 +56,15 @@
 					
 					<input placeholder="Enter customer code" type="text" class="email" id="email" name="customer_id" value=""style='width:100%;'>
 					<div class="buttons">
-						<button class="close-btn">Close</button>
 						<button type="submit">Submit</button>
+						<button class="close-btn">Close</button>
+						
 					</div>
 				</form>
+				<div class="buttons">
+					
+					
+				</div>
 			</div>
 		</section>
 	
