--- a/eagle/templates/main/admin_main.html
+++ b/eagle/templates/main/admin_main.html
@@ -19,7 +19,7 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="index.html" class="brand">
-			<img class='bx' src="{% static 'img/eagle-logo.jpg' %}" style="background-size: cover; position: relative; border-radius: 50%; padding-top: 10px;">
+			<img class='bx' alt="logo" src="{% static 'img/eagle-logo.jpg' %}" style="background-size: cover; position: relative; border-radius: 50%; padding-top: 10px;">
 			
 			<span class="text">ADMIN</span>
 		</a>
