--- a/eagle/templates/main/agent_main.html
+++ b/eagle/templates/main/agent_main.html
@@ -10,6 +10,7 @@
 	<!-- My CSS -->
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/payment.css' %}">
+	<link rel="stylesheet" href="{% static 'css/toast.css' %}">
 
 	<title>AdminHub</title>
 </head>
@@ -30,12 +31,7 @@
 					<span class="text">Payment</span>
 				</a>
 			</li>
-			<li >
-				<a href="{% url 'register_agent' %}">
-					<i class='bx bxs-wallet'></i>
-					<span class="text">Analytics</span>
-				</a>
-			</li>
+			
 			
 		</ul>
 		<ul class="side-menu">
