--- a/eagle/templates/dashboard/admin/index.html
+++ b/eagle/templates/dashboard/admin/index.html
@@ -44,7 +44,7 @@
                     <a href="collection.html">
                         <i class='bx bxs-dollar-circle' ></i>
                         <span class="text">
-                            <h3>$2543</h3>
+                            <h3>(NGN){{total_amount_paid}}</h3>
                             <p>Total collections</p>
                         </span>
                     </a>
