--- a/eagle/templates/dashboard/admin/customer_list.html
+++ b/eagle/templates/dashboard/admin/customer_list.html
@@ -25,10 +25,10 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="btn-download">
-					<i class='bx bxs-cloud-download' ></i>
-					<span class="text">Download PDF</span>
-				</a>
+				<div class="btn-download">
+					<button class="text" id="export-pdf">Download PDF</button>
+					<button id="downloadexcel">Export as Excel</button>
+				</div>
                 
 			</div>
             <ul class="box-info">
@@ -61,7 +61,7 @@
 					</div>
 					<!-- customer_list.html -->
 
-<table>
+<table id="table">
     <!-- Table headers -->
     <thead>
         <tr>
