--- a/eagle/templates/dashboard/admin/payment_history.html
+++ b/eagle/templates/dashboard/admin/payment_history.html
@@ -29,13 +29,9 @@
 						</li>
 					</ul>
 				</div>
-				<div href="#" class="download">
-					<button>
-						<i class='bx bxs-cloud-download' ></i>
-						<span class="text">Download PDF</span>
-					</button>
-					
-					
+				<div class="btn-download">
+					<button class="text" id="export-pdf">Download PDF</button>
+					<button id="downloadexcel">Export as Excel</button>
 				</div>
 			</div>
 
