--- a/eagle/templates/dashboard/admin/register_customer.html
+++ b/eagle/templates/dashboard/admin/register_customer.html
@@ -51,7 +51,9 @@
 					{% if messages %}
 					<ul class="messages">
 						{% for message in messages %}
-						<li class="{{ message.tags }}">{{ message }}</li>
+						<div class="notifications">
+        
+						</div>
 						{% endfor %}
 					</ul>
 					{% endif %}
@@ -59,7 +61,6 @@
 			</div>
 		</main>
 		<!-- MAIN -->
-	</section>
 	<!-- CONTENT -->
 	
 	<script>
