--- a/eagle/templates/dashboard/admin/team.html
+++ b/eagle/templates/dashboard/admin/team.html
@@ -25,10 +25,14 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="btn-download">
-					<i class='bx bxs-cloud-download' ></i>
-					<span class="text">Download PDF</span>
-				</a>
+				
+					
+					<div class="btn-download">
+						<button class="text" id="export-pdf">Download PDF</button>
+						<button id="downloadexcel">Export as Excel</button>
+					</div>
+					
+				
                 
 			</div>
             <ul class="box-info">
@@ -60,7 +64,7 @@
 						<i class='bx bx-search' ></i>
 						<i class='bx bx-filter' ></i>
 					</div>
-					<table>
+					<table id="table">
 						<thead>
 							<tr>
 								<th>ID No.</th>
