--- a/eagle/templates/main/admin_main.html
+++ b/eagle/templates/main/admin_main.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link rel="stylesheet" href="{% static 'css/form.css' %}">
 	<link rel="stylesheet" href="{% static 'css/payment.css' %}">
+	<link rel="stylesheet" href="{% static 'css/modal.css' %}">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
     <!-- Include the jsPDF library -->
@@ -71,5 +72,6 @@
 	<script src="{% static 'js/active.js' %}"></script>
 	<script src="{% static 'js/report.js' %}"></script>
 	<script src="{% static 'js/table2excel.js' %}"></script>
+	<script src="{% static 'js/modal.js' %}"></script>
 </body>
 </html>
