--- a/eagle/templates/dashboard/admin/customer_list.html
+++ b/eagle/templates/dashboard/admin/customer_list.html
@@ -55,7 +55,7 @@
 			<div class="table-data">
 				<div class="order">
 					<div class="head">
-						<h3>Agents</h3>
+						<h3>Customer</h3>
 						<i class='bx bx-search' ></i>
 						<i class='bx bx-filter' ></i>
 					</div>
