--- a/eagle/templates/dashboard/admin2/base1.html
+++ b/eagle/templates/dashboard/admin2/base1.html
@@ -76,48 +76,47 @@
               
              
              
-               
-            
               
-              <li class="nav-item">
-                <a  href="{% url 'home' %}">
-                  <i class="fas fa-home"></i>
-                      <p>Dashboard</p>
-                      
-                  </a>
-                  
-                  <a href="{% url 'register_agent' %}">
-                  <i class="fas fa-user"></i>
-                      <p>Register Agent</p>
-                      
-                  </a>
-                  
-           
-                  <a  href="{% url 'register_customer' %}">
-                  <i class="fas fa-user"></i>
-                      <p>Register Client</p>
-                      
-                  </a>
-                  
-              
-              
-                  <a  href="{% url 'agent_list' %}">
-                  <i class="fas fa-list"></i>
-                      <p>Agent List</p>
-                      
-                  </a>
-                  
-              
-              
-                  <a  href="{% url 'customer_list' %}">
-                  <i class="fas fa-list"></i>
-                      <p>Client List</p>
-                      
-                  </a>
-                  
-                
-              </li>
-              
+                <li class="nav-item">
+                    <a  href="{% url 'home' %}">
+                    <i class="fas fa-home"></i>
+                        <p>Dashboard</p>
+                        
+                    </a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'register_agent' %}">
+                    <i class="fas fa-user"></i>
+                        <p>Register Agent</p>
+                        
+                    </a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a  href="{% url 'register_customer' %}">
+                    <i class="fas fa-user"></i>
+                        <p>Register Client</p>
+                        
+                    </a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a  href="{% url 'agent_list' %}">
+                    <i class="fas fa-list"></i>
+                        <p>Agent List</p>
+                        
+                    </a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a  href="{% url 'customer_list' %}">
+                    <i class="fas fa-list"></i>
+                        <p>Client List</p>
+                        
+                    </a>
+                    
+                </li>
             </ul>
           </div>
         </div>
@@ -159,18 +158,7 @@
               <nav
                 class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex"
               >
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button type="submit" class="btn btn-search pe-1">
-                      <i class="fa fa-search search-icon"></i>
-                    </button>
-                  </div>
-                  <input
-                    type="text"
-                    placeholder="Search ..."
-                    class="form-control"
-                  />
-                </div>
+                
               </nav>
 
               <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
@@ -188,15 +176,7 @@
                     <i class="fa fa-search"></i>
                   </a>
                   <ul class="dropdown-menu dropdown-search animated fadeIn">
-                    <form class="navbar-left navbar-form nav-search">
-                      <div class="input-group">
-                        <input
-                          type="text"
-                          placeholder="Search ..."
-                          class="form-control"
-                        />
-                      </div>
-                    </form>
+                    
                   </ul>
                 </li>
                
@@ -252,21 +232,24 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Account Setting</a>
                         <div class="dropdown-divider"></div>
-                        <form id="logout-form" action="{% url 'agent_logout' %}" method="post">
-                          {% csrf_token %}
-                          <button type="submit" style="display: none;"></button>
+                        <form id="logout-form" action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" style="display: none;"></button>
                         </form>
                         <a href="#" class="dropdown-item" id="logout-link">
-                            <i class='bx bxs-log-out-circle' ></i>
+                            
                             <span class="text">Logout</span>
                         </a>
-                      </li>
-                      <script>
+                        <script>
                           document.getElementById('logout-link').addEventListener('click', function(event) {
                               event.preventDefault();  // Prevent the default link behavior
                               document.getElementById('logout-form').submit();  // Submit the form
                           });
-                      </script>
+                        </script>
+                      </li>
+                      
+                    
+                      
                     </div>
                   </ul>
                 </li>
@@ -293,225 +276,97 @@
           <div class="container-fluid d-flex justify-content-between">
             <nav class="pull-left">
               <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="http://www.themekita.com">
-                    ThemeKita
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Help </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Licenses </a>
-                </li>
+                
               </ul>
             </nav>
-            <div class="copyright">
-              2024, made with <i class="fa fa-heart heart text-danger"></i> by
-              <a href="http://www.themekita.com">ThemeKita</a>
-            </div>
-            <div>
-              Distributed by
-              <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
-            </div>
+            
           </div>
         </footer>
       </div>
 
       <!-- Custom template | don't include it in your project! -->
-      <div class="custom-template">
-        <div class="title">Settings</div>
-        <div class="custom-content">
-          <div class="switcher">
-            <div class="switch-block">
-              <h4>Logo Header</h4>
-              <div class="btnSwitch">
-                <button
-                  type="button"
-                  class="selected changeLogoHeaderColor"
-                  data-color="dark"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="blue"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="purple"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="light-blue"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="green"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="orange"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="red"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="white"
-                ></button>
-                <br />
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="dark2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="blue2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="purple2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="light-blue2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="green2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="orange2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeLogoHeaderColor"
-                  data-color="red2"
-                ></button>
-              </div>
-            </div>
-            <div class="switch-block">
-              <h4>Navbar Header</h4>
-              <div class="btnSwitch">
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="dark"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="blue"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="purple"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="light-blue"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="green"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="orange"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="red"
-                ></button>
-                <button
-                  type="button"
-                  class="selected changeTopBarColor"
-                  data-color="white"
-                ></button>
-                <br />
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="dark2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="blue2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="purple2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="light-blue2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="green2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="orange2"
-                ></button>
-                <button
-                  type="button"
-                  class="changeTopBarColor"
-                  data-color="red2"
-                ></button>
-              </div>
-            </div>
-            <div class="switch-block">
-              <h4>Sidebar</h4>
-              <div class="btnSwitch">
-                <button
-                  type="button"
-                  class="changeSideBarColor"
-                  data-color="white"
-                ></button>
-                <button
-                  type="button"
-                  class="selected changeSideBarColor"
-                  data-color="dark"
-                ></button>
-                <button
-                  type="button"
-                  class="changeSideBarColor"
-                  data-color="dark2"
-                ></button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="custom-toggle">
-          <i class="icon-settings"></i>
+<div class="custom-template">
+  <div class="title">Settings</div>
+  <div class="custom-content">
+    <div class="switcher">
+      <div class="switch-block">
+        <h4>Logo Header</h4>
+        <div class="btnSwitch">
+          <!-- Example for Logo Header -->
+          <button type="button" class="changeLogoHeaderColor" data-color="dark"></button>
+          <button type="button" class="changeLogoHeaderColor" data-color="blue"></button>
+          <!-- Add other buttons as needed -->
         </div>
       </div>
-      <!-- End Custom template -->
+      <div class="switch-block">
+        <h4>Navbar Header</h4>
+        <div class="btnSwitch">
+          <button type="button" class="changeTopBarColor" data-color="dark"></button>
+          <button type="button" class="changeTopBarColor" data-color="blue"></button>
+          <!-- Add other buttons as needed -->
+        </div>
+      </div>
+      <div class="switch-block">
+        <h4>Sidebar</h4>
+        <div class="btnSwitch">
+          <button type="button" class="changeSideBarColor" data-color="white"></button>
+          <button type="button" class="changeSideBarColor" data-color="dark"></button>
+          <!-- Add other buttons as needed -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="custom-toggle">
+    <i class="icon-settings"></i>
+  </div>
+</div>
+<!-- End Custom template -->
+
+<script type="text/javascript">
+  document.querySelectorAll('.changeLogoHeaderColor, .changeTopBarColor, .changeSideBarColor').forEach(button => {
+    button.addEventListener('click', function() {
+      const color = this.getAttribute('data-color');
+      const type = this.classList.contains('changeLogoHeaderColor') ? 'logo_header_color' :
+                   this.classList.contains('changeTopBarColor') ? 'navbar_color' :
+                   'sidebar_color';
+
+      // Send AJAX request to save settings
+      fetch('/save-site-settings/', {
+        method: 'POST',
+        headers: {
+          'X-CSRFToken': '{{ csrf_token }}',
+          'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: `${type}=${color}`
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.status === 'success') {
+          // Reload the page to apply changes
+          location.reload();
+        } else {
+          alert('Failed to save settings. Please try again.');
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+      });
+    });
+  });
+
+  // Fetch and apply initial settings on page load
+  window.onload = function() {
+    fetch('/get-site-settings/')
+      .then(response => response.json())
+      .then(settings => {
+        // Apply the settings to the body or other elements
+        document.body.classList.add(settings.logo_header_color);
+        document.querySelector('.navbar').classList.add(settings.navbar_color);
+        document.querySelector('.sidebar').classList.add(settings.sidebar_color);
+      });
+  };
+</script>
+
     </div>
      <!--   Core JS Files   -->
      <script src="{% static 'assets/js/core/jquery-3.7.1.min.js' %}"></script>
@@ -548,7 +403,18 @@
  
      <!-- Kaiadmin DEMO methods, don't include it in your project! -->
      <script src=" {% static 'assets/js/setting-demo.js' %}"></script>
-    
-    
+     
+     <script src="{% static 'js/report.js' %}"></script>
+	 <script src="{% static 'js/table2excel.js' %}"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+     <!-- Include the jsPDF library -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
+     <!-- Include the js-xlsx library for Excel export -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
+
+     <!-- Include the TableExport library -->
+     <script src="https://cdn.jsdelivr.net/npm/tableexport@5.2.0/dist/js/tableexport.min.js"></script>
   </body>
 </html>
