--- a/eagle/templates/dashboard/agent2/agent_dash.html
+++ b/eagle/templates/dashboard/agent2/agent_dash.html
@@ -25,9 +25,9 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h6><b>Todays Income</b></h6>
-                <p class="text-muted">All Customs Value</p>
+                <!--<p class="text-muted">All Customs Value</p>-->
               </div>
-              <h4 class="text-info fw-bold">$170</h4>
+              <h4 class="text-info fw-bold">NGN {{ total_today }}</h4>
             </div>
             <div class="progress progress-sm">
               <div
@@ -51,9 +51,9 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h6><b>Total Revenue Collected</b></h6>
-                <p class="text-muted">All Customs Value</p>
+                <!--<p class="text-muted">All Customs Value</p>-->
               </div>
-              <h4 class="text-success fw-bold">$120</h4>
+              <h4 class="text-success fw-bold">NGN {{ total_overall }}</h4>
             </div>
             <div class="progress progress-sm">
               <div
